Scrolling Homecher on first/last page will no longer ignore events

Bug: 874202
Change-Id: I19db72345f8646ffa1100d2b51672990e12041e2
Reviewed-on: https://chromium-review.googlesource.com/1228998
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592256}
Former-commit-id: 2ffd13b588a8f155e9358b9956e2217e4bcc1233